BackupsRestore: clean lint warnings [svn r385]